<resources>
    <string name="app_name">سماشي</string>
    <string name="facebook_app_id">584392115452220</string>
    <string name="fb_login_protocol_scheme">fb584392115452220</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_live">Live</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Setting</string>
    <string name="back_pressed">اضغط مرة أخرى للخروج</string>
    <string name="request_issue">كان هناك مشكلة مع طلبك. الرجاء معاودة المحاولة في وقت لاحق.</string>
    <string name="no_internet">الانترنت غير متصل</string>
    <string name="connection_timed_out">انتهت مدة الاتصال</string>
    <string name="full_access_to_live">Full Access to live</string>
    <string name="cancel_membership">
        <u>Cancel membership</u>
    </string>
    <string name="default_notification_channel_id">default</string>
    <string name="please_enter_name">يرجى إدخال اسمك</string>
    <string name="please_enter_email">الرجاء إدخال عنوان البريد الإلكتروني</string>
    <string name="please_enter_password">من فضلك أدخل كلمة المرور</string>
    <string name="invalid_password">يجب أن تحتوي كلمة المرور على حرف واحد كبير على الأقل ، حرف واحد صغير ، رقم واحد ، حرف واحد خاص</string>
    <string name="problem_loading_picture">حدثت مشكلة أثناء تحميل صورة الملف الشخصي</string>
    <string-array name="nav_adapter">
        <item>الفئات</item>
        <item>أحدث الحلقات</item>
        <item>الأكثر مشاهدة</item>
        <item>تجارة و أعمال</item>
        <item>تكنولوجيا</item>
        <item>لايف ستايل</item>

        <item>برامج</item>
        <item>قهوة و خبرية</item>
        <item>سوالف الغدا</item>
        <item>خبر آخر ساعة</item>
        <item>مال وأعمال</item>
        <item>Dubai Works</item>
    </string-array>
    <string name="forgot_password_desc">ادخل بريدك الإلكتروني لتغيير كلمة المرور الخاصة بك</string>
    <string name="billing_details">Billing details</string>
    <string name="title_account">Account</string>
    <string name="logIn">تسجيل الدخول</string>
    <string name="welcomtosmashitv">مرحباً بعودتك إلى سماشي</string>
    <string name="signUp">انشاء حساب</string>
    <string name="free_trial">فترة تجريبية مجانية لمدة 7 أيام</string>
    <string name="welcommessageonSignIn">مرحباً بعودتك إلى سماشي. سجّل الدخول لمشاهدة آخر الأخبار والأفكار عن كل ما
        يتعلق بإدارة الأعمال والتقنية والإعلام والثقافة.
    </string>
    <string name="try_again">إعادة المحاولة</string>
    <string name="error_fetching_vods">حدث خطأ أثناء جلب VODs</string>
    <string name="please_wait">الرجاء الانتظار…</string>
    <string name="name_username_or_id">البريد الالكتروني</string>
    <string name="first_name">الاسم الاول</string>
    <string name="last_name">الكنية</string>
    <string name="pass">كلمة السر</string>
    <string name="remember_me">تذكّر بياناتي</string>
    <string name="forgot_password">نسيت كلمة المرور</string>
    <string name="Sign_In">تسجيل دخول</string>
    <string name="reset_password">تغيير كلمة المرور</string>
    <string name="no_account_sign_up">إذا لم يكن لديك حساب في سماشي ، قم بإنشاء حساب جديد الآن</string>
    <string name="login_with_facebook">الدخول عبر فيسبوك</string>
    <string name="login_with_google">الدخول عبر جوجل</string>
    <string name="onLiveNews">قناة إخبارية مباشرة</string>
    <string name="unlimited_onDemand_videos">مقاطع فيديو غير محدودة عند الطلب</string>
    <string name="no_creditCard_Required">لا يتطلب التسجيل بطاقة ائتمان</string>
    <string name="send_updated">اريد استقبال آخر المستجدّات من سماشي</string>
    <string name="newsletter_receiving">اريد استقبال آخر المستجدّات من سماشي</string>
    <string name="notifications_receiving">أرغب في تلقي الإشعارات من سماشي</string>
    <string name="new_password_mismatch">كلمة المرور الجديدة وتأكيد كلمة المرور الجديدة غير متطابقة</string>
    <string name="new_old_password_same">كلمة المرور الجديدة لا يمكن أن تكون كلمة المرور القديمة</string>
    <string name="terms_and_conditions">أوافق على الشروط</string>
    <string name="mandatory_accept_conditions">أوافق على الشروط والأحكام</string>
    <string name="please_accept_conditions">يرجى قبول الشروط والأحكام</string>
    <string name="alreadyHaveAnAccount">هل لديك حساب في سماشي؟ </string>
    <string name="alreadyHaveAnAccountLogin">تسجيل الدخول</string>
    <string name="signUpWithFacebook">التسجيل عبر فيسبوك</string>
    <string name="signupWithGoogle">التسجيل عبر جوجل</string>
    <string name="signuptext">تسجيل</string>
    <string name="submit">إرسال</string>
    <string name="fogotPassword">هل نسيت كلمة المرور</string>
    <string name="home">الرئيسية</string>
    <string name="search">بحث</string>
    <string name="account">حسابي</string>
    <string name="setting">المزيد</string>
    <string name="notification">الإشعارات</string>
    <string name="rate_our_app">تقييم التطبيق لدينا</string>
    <string name="rate_our_app_text">إذا كنت ترغب في تطبيقنا ، هل ترغب في تقييمه؟ سوف يستغرق دقيقة واحدة فقط</string>
    <string name="rate_it_now">معدل الآن</string>
    <string name="no_thanks">لا شكرا</string>
    <string name="remind_me_later">ذكرني لاحقا</string>
    <string name="accountDetails">حسابي</string>
    <string name="abount">عن سماشي</string>
    <string name="privacy">سياسة الخصوصية</string>
    <string name="terms">الشروط والأحكام</string>
    <string name="advertiseWithUs">أعلن معنا</string>
    <string name="help">تواصل معنا</string>
    <string name="signOut">تسجيل الخروج</string>
    <string name="my_account">حسابي</string>
    <string name="edit_info">تعديل البيانات</string>
    <string name="subscribe_toSmashiTV">اشترك في سماشي للحصول على:</string>
    <string name="full_access_to_liveStreaming">مشاهدة جميع البرامج المباشرة
    </string>
    <string name="watchFullShow">مشاهدة جميع البرامج على مدار الساعة
    </string>
    <string name="personalInfo">المعلومات الشخصية</string>
    <string name="billin_details">تفاصيل الفواتير</string>
    <string name="current_package">الباقة الحالية</string>
    <string name="weekly">أسبوعياً AED 4</string>
    <string name="change_plan">تغيير الباقة</string>
    <string name="cancle_subscription">إلغاء الاشتراك</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="gotoSmashiTV">انتقل إلى سماشي</string>
    <string name="choose_your_package">إختر باقتك</string>
    <string name="textEditAccountDetails">اشتراك</string>
    <string name="plan">AED4/ أسبوعياً</string>
    <string name="demoEmail">rich@google.com</string>
    <string name="invalid_email">غير صالحة البريد الإلكتروني</string>
    <string name="info_head">معلومات</string>
    <string name="changeEmail">تغيير البريد الاكتروني</string>
    <string name="changePassword">تغيير كلمة السرّ</string>
    <string name="forgotPassword">نسيت رقمك السري؟</string>
    <string name="select_payment">الرجاء اختيار طريقة الدفع المفضّلة</string>
    <string name="changePlan">الباقة الحالية</string>
    <string name="email">البريد الالكتروني</string>
    <string name="newEmailID">البريد الالكتروني الجديد</string>
    <string name="save">حفظ</string>
    <string name="cancel">إلغاء</string>
    <string name="newPass">كلمة السرّ الجديدة</string>
    <string name="confirmPass">تأكيد كلمة السرّ</string>
    <string name="forgot_pass">نسيت كلمة السرّ</string>
    <string name="cardNumber">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="remember_card">تذكر البطاقة</string>
    <string name="current_plan">الباقة الحالية</string>
    <string name="weekly_w">أسبوعياً</string>
    <string name="daily_aed">يومياً AED 2</string>
    <string name="weekly_aed">أسبوعياً AED 4</string>
    <string name="monthlyPlan">شهرياً AED 12</string>
    <string name="account_subject">الحساب يدعم البث على جهاز واحد فقط</string>
    <string name="bill_start_every_week">يتم إرسال الفواتير أسبوعياً</string>
    <string name="password_does_not_match">كلمة السر غير متطابقةً</string>
    <string name="auth_problems">كانت هناك بعض مشاكل المصادقة</string>
    <string name="fb_cancelled">"تم إلغاء تسجيل الدخول على فيسبوك</string>
    <string name="fb_error">مشكلة في الاتصال مع Facebook</string>
    <string name="payment_details">تفاصيل الدفع</string>
    <string name="password_must_be_8">يجب أن تتكون كلمة المرور من 8 أحرف أو أكثر</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="help_smashi">support@SMASHI.TV</string>
    <string name="dialog_title">قيم هذا التطبيق</string>
    <string name="dialog_message">إذا كنت تستمتع بتشغيل هذا التطبيق ، فهل تمانع في قضاء الوقت لتقييمه؟ لن يستغرق الأمر أكثر من دقيقة. شكرا لدعمك!</string>
    <string name="dialog_ok">معدل الآن</string>
    <string name="dialog_cancel">ذكرني لاحقا</string>
    <string name="dialog_no">لا شكرا</string>
    <string name="notifications_on">إشعارات على</string>
    <string name="notifications_off">إشعارات إيقاف</string>
    <string name="backstackentrycount_home">BackstackEntryCount - HomeHolder</string>
    <string name="ask_storage_permission">This app needs access to your phone\'s storage in order to pick a picture</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smashi_subscription">إشتراك سماشي</string>
    <string name="enter_your_phone_number">ادخل رقم الهاتف الخاص بك</string>
    <string name="enter_your_operator_code">ادخل رمز التشغيل</string>
    <string name="auto_renew">تجديد تلقائي</string>
    <string name="send_varification_sms">إرسل رسالة نصية</string>
    <string name="about">حول</string>
    <string name="advertisement">الإعلانات</string>
    <string name="same_fragment_selected">Same Fragment selected</string>
    <string name="january_ab">كانون الثاني</string>
    <string name="february_ab">شهر فبراير</string>
    <string name="march_ab">مارس</string>
    <string name="april_ab">أبريل</string>
    <string name="may_ab">مايو</string>
    <string name="jun_ab">يونيو</string>
    <string name="july_ab">يوليو</string>
    <string name="august_ab">أغسطس</string>
    <string name="sept_ab">سبتمبر</string>
    <string name="oct_ab">شهر اكتوبر</string>
    <string name="nov_ab">شهر نوفمبر</string>
    <string name="dec_ab">ديسمبر</string>
    <string name="january_ab_num">واحد</string>
    <string name="february_ab_num">اثنان</string>
    <string name="march_ab_num">ثلاثة</string>
    <string name="april_ab_num">أربعة</string>
    <string name="may_ab_num">خمسة</string>
    <string name="jun_ab_num">ستة</string>
    <string name="july_ab_num">سبعة</string>
    <string name="august_ab_num">ثمانية</string>
    <string name="sept_ab_num">تسعة</string>
    <string name="oct_ab_num">عشرة</string>
    <string name="nov_ab_num">أحد عشر</string>
    <string name="dec_ab_num">اثني عشر</string>
    <string name="one_ab_num">١</string>
    <string name="two_ab_num">٢</string>
    <string name="three_ab_num">٣</string>
    <string name="four_ab_num">٤</string>
    <string name="five_ab_num">٥</string>
    <string name="six_ab_num">٦</string>
    <string name="seven_ab_num">٧</string>
    <string name="eight_ab_num">٨</string>
    <string name="nine_ab_num">٩</string>
    <string name="ten_ab_num">١٠</string>
    <string name="eleven_ab_num">١١</string>
    <string name="twelve_ab_num">١٢</string>
    <string name="thirteen_ab_num">١٣</string>
    <string name="fourteen_ab_num">١٤</string>
    <string name="fifteen_ab_num">١٥</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="trial_text">Avail your free trial for 7 days</string>
</resources>