<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.smashitvmvvm.ui.viewmodel.AuthViewModel" />

        <variable
            name="handler"
            type="com.example.smashitvmvvm.ui.handler.AuthHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="10dp"
        tools:context=".ui.activities.AuthActivity">

        <ImageView
            android:id="@+id/ivSmashiLogo"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/saturation_arabic_orange"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/authButton"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnSignUp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_marginEnd="10dp"
            style="@style/authButton"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/whiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

