<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="invisible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_gmail"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_marginLeft="5dp"/>

    <ImageView
        android:layout_gravity="center"
        android:layout_above="@id/svAuth"
        android:layout_centerInParent="true"
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/saturation_arabic_orange" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/svAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView android:id="@+id/tvMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/welcommessageonSignIn"
                android:gravity="center"
                android:fontFamily="@font/expo_arabic_book"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="90dp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_below="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:hint="@string/name_username_or_id"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:paddingBottom="4dp"
                android:textColorHint="@color/white"
                android:paddingTop="10dp"
                android:fontFamily="@font/expo_arabic_book"
                android:paddingRight="5dp"
                android:gravity="right"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_marginLeft="@dimen/thirtydp"
                android:layout_marginRight="@dimen/thirtydp"
                android:background="@drawable/text_corner"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" android:paddingEnd="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPass"
                android:layout_below="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/text_corner"
                app:passwordToggleTintMode="screen"
                android:layoutDirection="rtl"
                app:hintEnabled="false"
                android:textColorHint="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail">


                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:background="@null"
                    android:paddingRight="5dp"
                    android:paddingTop="4dp"
                    android:fontFamily="@font/expo_arabic_book"
                    android:drawableRight="@drawable/eye"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:hint="@string/pass"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/eye" android:paddingEnd="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView android:id="@+id/tvforgotPassword"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/editTextPass"
                android:fontFamily="@font/expo_arabic_book"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:text="هل نسيت كلمة المرور؟"
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_below="@+id/tvforgotPassword"
                android:layout_centerInParent="true"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/Sign_In"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/expo_arabic_book"
                android:textColor="@color/white"
                android:background="@drawable/btnbackground"
                android:layout_marginTop="10dp"/>

            <Button android:id="@+id/button_facebookart"
                android:layout_centerInParent="true"
                android:layout_below="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:text="@string/login_with_facebook"
                android:paddingStart="4dp"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/expo_arabic_book"
                android:background="@drawable/facebook_btn_selecter"
                android:textColor="@color/facebook_color"
                android:drawableStart="@drawable/facebook_icon_reducer"/>

            <!--android:background="@drawable/facebook_btn_selecter"-->
            <!--android:drawableLeft="@drawable/facebook_icon"-->
            <!--android:text="@string/login_with_facebook"-->
            <!--android:textColor="@color/facebook_color"-->

            <Button android:id="@+id/button_gmailart"
                android:layout_below="@+id/button_facebookart"
                android:layout_centerInParent="true"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:paddingStart="6dp"
                android:background="@drawable/google_button_selecter"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/expo_arabic_book"
                android:layout_marginTop="8dp"
                android:text="@string/login_with_google"
                android:textColor="@color/google_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_facebookart"
                android:drawableStart="@drawable/google_icon_reducer"/>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>




    <TextView
        android:id="@+id/textviewNoAccount"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:clickable="true"
        android:fontFamily="@font/expo_arabic_book"
        android:gravity="center"
        android:focusable="true" />



</RelativeLayout>